<resources>
    <string name="app_name">다함노트 - 청각장애인용</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">기기와 연결되어있지 않습니다. 먼저 연결을 시도해주세요.</string>
    <string name="connection_lost">기기와 연결이 끊겼습니다. 다시 연결을 시도해주세요.</string>
    <string name="bt_not_enabled_leaving">블루투스를 켜주세요.</string>

    <!--  Bluetooth Connect -->
    <string name="dialog_bluetooth_title">블루투스 연결</string>
    <string name="dialog_bluetooth_name_title">이름 설정</string>
    <string name="dialog_bluetooth_device_title">연결할 기기 선택</string>
    <string name="dialog_bluetooth_name_hint">이름 입력</string>
    <string name="dialog_bluetooth_device_hint">강연자 기기 선택</string>
    <string name="none_paired">페어링된 기기가 없습니다. 먼저 강연자 기기와 페어링을 진행해주세요.</string>
    <string name="hint_student_name">사용할 이름을 입력해세요.</string>
    <string name="hint_student_name_length">이름은 10글자 이하로 설정해주세요.</string>
    <string name="hint_device_connect">연결할 디바이스를 선택하세요. </string>
    <string name="connected">연결되었습니다.</string>

    <string name="none_found">No devices found</string>
    <string name="scanning">scanning for devices...</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">기기 연결</string>
    <string name="discoverable">기기 찾기</string>
    <string name="start_recognition">음성인식을 시작합니다.</string>

    <!-- lecture -->
    <string name="dialog_lecture_save_title">강연(회의) 저장</string>
    <string name="dialog_lecture_name_title">강연(회의) 이름</string>
    <string name="dialog_lecture_date">강연(회의) 날짜</string>
    <string name="add_lecture">강연(회의) 추가</string>
    <string name="hint_lecture_name">강연(회의) 이름 입력</string>
    <string name="hint_lecture_date">날짜 선택</string>
    <string name="confirm">완료</string>
    <string name="cancel">취소</string>
    <string name="lecture_saved">강연(회의)이 저장되었습니다.</string>
    <string name="lecture_exist">중복된 강연(회의) 이름을 사용할 수 없습니다.</string>
    <string name="lecture_name_required">강연(회의) 이름을 입력하세요. </string>

    <!-- chatting -->
    <string name="me">나</string>
    <string name="teacher">강연자</string>
    <string name="direct">강연자 (개인메시지)</string>
    <string name="question">강연자 (질문)</string>
    <string name="save_lecture">강연(회의) 저장</string>
    <string name="separator">:</string>
    <string name="attend_class">강연(회의)에 참가했습니다.</string>
    <string name="save">저장하기</string>
    <string name="question_input">질문 입력</string>


    <!-- main -->
    <string name="offline">오프라인</string>
    <string name="online">온라인</string>
    <string name="lecture_list">저장된 강연(회의)</string>


    <!-- lecture -->
    <string name="lecture_id">lectureId</string>
    <string name="lecture_name">강연(회의) 리스트 이름</string>
    <string name="lecture_deleted">삭제되었습니다.</string>
    <string name="dialog_lecture_delete_title">강연(회의) 삭제</string>
    <string name="dialog_lecture_delete_question">강연(회의)을 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>

    <!--exit-->
    <string name="dialog_exit_title">강연(회의) 종료</string>
    <string name="dialog_exit_question">강연(회의)을 종료하시겠습니까?</string>
    <string name="exit">종료</string>
    <string name="keep">유지</string>


    <string name="reconnect_description">재연결 시 이전 강연(회의)내용을 유지하시겠습니까?</string>
    <string name="reconnect">블루투스 재연결</string>
    <string name="disconnected_description">연결이 끊겼어요. 다시 연결하려면 우측 상단의 연결 버튼을 눌러주세요.</string>
    <string name="dismiss">닫기</string>
    <string name="connect_state">연결 상태</string>
    <string name="lecture_empty">저장된 강연(회의)이 없습니다</string>
    <string name="saving">저장</string>
    <string name="splash_title">청각장애인용</string>


    <!-- Setting Recognizer -->
    <string name="setting_speech_name"> 설정</string>
    <string name="setting_silence_name"> 음성 인식 구간 설정</string>
    <string name="setting_language_name"> 언어 설정</string>
    <string name="setting_seconds_0">0초</string>
    <string name="setting_seconds_10">10초</string>
    <string name="stop_recognition">음성인식을 종료합니다.</string>
    <string name="preference_file_key">bluetooth_connect</string>
    <string name="lastly_registered_student_name">last_registered_student_name</string>
</resources>