<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_bluetooth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:fontFamily="@font/sc_dream6"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.05"
        android:text="@string/dialog_bluetooth_title"
        android:textColor="#2f2f2f"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_bluetooth_title" />

    <TextView
        android:id="@+id/tv_dialog_bluetooth_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="0dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:text="@string/dialog_bluetooth_name_title"
        android:fontFamily="@font/sc_dream5"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="#2f2f2f"
        android:letterSpacing="-0.05"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <EditText
        android:id="@+id/edt_dialog_bluetooth_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@drawable/bg_dialog_input"
        android:fontFamily="@font/noto_sanas_kr_medium"
        android:gravity="center_horizontal"
        android:hint="@string/dialog_bluetooth_name_hint"
        android:letterSpacing="-0.05"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black2"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_bluetooth_name_title"
        android:elevation="3dp" />


    <TextView
        android:id="@+id/tv_dialog_bluetooth_device_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/dialog_bluetooth_device_title"
        android:fontFamily="@font/sc_dream5"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="#2f2f2f"
        android:letterSpacing="-0.05"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_dialog_bluetooth_name" />

    <Spinner
        android:id="@+id/sp_dialog_bluetooth_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_input"
        android:spinnerMode="dropdown"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/SpinnerTheme"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_bluetooth_device_title"
        android:elevation="3dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_dialog_bluetooth_device">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_cancel"
            android:contentDescription="취소"
            android:paddingVertical="18dp"
            android:text="@string/cancel"
            android:fontFamily="@font/sc_dream5"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_confirm"
            android:contentDescription="완료"
            android:paddingVertical="18dp"
            android:text="@string/confirm"
            android:fontFamily="@font/sc_dream5"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>