<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_dialog_exit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/sc_dream6"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.05"
        android:text="@string/dialog_exit_title"
        android:textColor="#2f2f2f"
        android:textSize="20sp"
        android:textStyle="bold"
        android:contentDescription="프로그램 종료 창"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_exit_title" />

    <TextView
        android:id="@+id/tv_dialog_exit_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:contentDescription="앱을 종료하시겠습니까? 설명글"
        android:text="@string/dialog_exit_question"
        android:fontFamily="@font/sc_dream5"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#2f2f2f"
        android:letterSpacing="-0.05"
        android:lineSpacingExtra="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view10" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_btn_layout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_exit_question">

        <Button
            android:id="@+id/btn_dialog_exit_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel"
            android:fontFamily="@font/sc_dream5"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/bg_dialog_cancel"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_dialog_exit_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="종료 취소" />

        <Button
            android:id="@+id/btn_dialog_exit_confirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/exit"
            android:fontFamily="@font/sc_dream5"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/bg_dialog_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dialog_exit_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="종료 확인" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>