<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/btn_dialog_reconnect_dismiss"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:src="@drawable/icon_dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="닫기" />

    <TextView
        android:id="@+id/tv_dialog_reconnect_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/sc_dream6"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.05"
        android:text="@string/reconnect"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:contentDescription="블루투스 재 연결"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_reconnect_title" />

    <TextView
        android:id="@+id/tv_dialog_reconnect_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginVertical="35dp"
        android:layout_marginHorizontal="35dp"
        android:contentDescription="재연결 시 이전 강연(회의)내용을 유지하시겠습니까? 설명글"
        android:text="@string/reconnect_description"
        android:fontFamily="@font/sc_dream5"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:letterSpacing="-0.05"
        android:lineSpacingExtra="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view10" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_btn_layout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_reconnect_question">

        <Button
            android:id="@+id/btn_dialog_reconnect_delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/delete"
            android:fontFamily="@font/sc_dream5"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/bg_dialog_cancel"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_dialog_reconnect_keep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="삭제" />

        <Button
            android:id="@+id/btn_dialog_reconnect_keep"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/keep"
            android:fontFamily="@font/sc_dream5"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/bg_dialog_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dialog_reconnect_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="유지" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    çç
</androidx.constraintlayout.widget.ConstraintLayout>